libs/extractor/src/snapshots/extractor__tests__tailwind_template_literal_with_parenthesized_expression.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import {Box} from '@devup-ui/core'\n<Box className={`${(cond ? 'text-red-500' : 'text-blue-500')} p-4`}>\n  hello\n</Box>\n\",\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "#3B82F6",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "#EF4444",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "1rem",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupClass51) => <div className={__devupClass51 || \"\"}>\n  hello\n</div>)(`${cond ? \"OHch__cvx9oho86ber\" : \"OHaon61_q2bfmpwnhu\"} OLpadding-v1rem`);\n",
}
