libs/extractor/src/snapshots/extractor__tests__template_literal_props-5.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr\"import {Box} from '@devup-ui/core'\n    <Box className={`  ${1} ${2}  `} />\n            \",\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "((__devupClass55) => <div className={__devupClass55 || \"\"} />)(`  ${1} ${2}  `);\n",
}
